fixed scrollbar overflow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -94,7 +94,7 @@ $iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
       }
 
       div.scroller{
-        width: 104.2%;
+        width: 100%;
         right: -30px;
         padding-right: 15px;
         height: auto;
